# trajectories

./: CMakeLists.txt  README.md  package.xml
cfg/: set_trajectory.cfg  set_trajectory_withDrop.cfg  set_trajectory_withDropReg.cfg
include/: mpc_trajectory.h~  nmpc_pc_mFxFylearning.h~  trajectory.h
launch/: nmpc_pc_mFxFylearning.launch~  trajectory.launch  trajectory_withDrop.launch  trajectory_withDropReg.launch
src/: trajectory.cpp  trajectory_withDrop.cpp  trajectory_withDropReg.cpp
